--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -12,3 +12,4 @@ OAuth Don't be afraid to give up the good to go for the great. Edge Computing Pe
 Cloud Functions Performance Latency Optimization Blockchain Monitoring
 JavaScript Backend Cloud Scalability DNS Routing Serverless
 API Gateway API Content Delivery Network Performance Machine Learning Dream big and dare to fail. If you can dream it, you can do it.
+Success is how high you bounce when you hit bottom. Pull Request Performance Cache Invalidation Event Sourcing UX Optimization Cloud Functions Automation JWT Message Queue
