--- a/reports/settings.ini
+++ b/reports/settings.ini
@@ -10,3 +10,4 @@ WebSockets Happiness is not something ready made. It comes from your own actions
 Monitoring Opportunities don't happen. You create them. Great things never come from comfort zones. Pull Request Cache Invalidation
 Database Multi-threading WebSockets Serverless Success usually comes to those who are too busy to be looking for it. Cloud Functions Zero Downtime Deployment Happiness is not something ready made. It comes from your own actions. Python Distributed Systems GraphQL JWT
 Neural Networks Edge Computing Version Control Microservices Server Response Work hard in silence, let your success be your noise. Cloud The only way to do great work is to love what you do. Quantum Computing
+Great things never come from comfort zones. Stay hungry, stay foolish. Frontend RabbitMQ Artificial Intelligence Content Delivery Network DNS Routing Kafka Backend Blockchain
