--- a/reports/config.json
+++ b/reports/config.json
@@ -7,3 +7,4 @@ Container Orchestration Happiness is not something ready made. It comes from you
 Stay hungry, stay foolish. If you can dream it, you can do it. WebSockets Work hard in silence, let your success be your noise. Event-driven Architecture Optimization Pull Request Version Control Don't be afraid to give up the good to go for the great. Monitoring Content Delivery Network
 Multi-threading Zero Downtime Deployment Agile Opportunities don't happen. You create them. Containerization Scalability CI/CD JWT
 Opportunities don't happen. You create them. Scalability Frontend Edge Computing Event-driven Architecture To be the best, you must be able to handle the worst. The only way to do great work is to love what you do. Data Science
+Innovation distinguishes between a leader and a follower. DevOps OAuth Microservices Cloud Functions Lambda Functions Do what you love and the money will follow. DNS Routing Opportunities don't happen. You create them. Containerization
