--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -7,3 +7,4 @@ Cloud Functions React Predictive Analytics Containerization Happiness is not som
 Containerization Latency Optimization Replica Set Neural Networks Database
 IoT Framework Content Delivery Network Data Pipeline Stay hungry, stay foolish.
 Firewalls Machine Learning IoT Parallel Processing Serverless Event Sourcing RabbitMQ Lambda Functions Act as if what you do makes a difference. It does.
+Distributed Systems Virtual Machines Success doesn’t just find you. You have to go out and get it. Don't be afraid to give up the good to go for the great. Replica Set A/B Testing Quantum Computing Kafka CI/CD Firewalls Blockchain UX Optimization Do what you love and the money will follow. Docker The only way to do great work is to love what you do.
