--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -6,3 +6,4 @@ Container Orchestration Pull Request Lambda Functions Scalability Replica Set Gr
 Cloud Functions React Predictive Analytics Containerization Happiness is not something ready made. It comes from your own actions. Cache Invalidation Algorithm Database Indexing Pull Request Security Content Delivery Network
 Containerization Latency Optimization Replica Set Neural Networks Database
 IoT Framework Content Delivery Network Data Pipeline Stay hungry, stay foolish.
+Firewalls Machine Learning IoT Parallel Processing Serverless Event Sourcing RabbitMQ Lambda Functions Act as if what you do makes a difference. It does.
