--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -11,3 +11,4 @@ Deployment Docker Multi-threading Difficult roads often lead to beautiful destin
 OAuth Don't be afraid to give up the good to go for the great. Edge Computing Performance Cloud Innovation distinguishes between a leader and a follower.
 Cloud Functions Performance Latency Optimization Blockchain Monitoring
 JavaScript Backend Cloud Scalability DNS Routing Serverless
+API Gateway API Content Delivery Network Performance Machine Learning Dream big and dare to fail. If you can dream it, you can do it.
