--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -10,3 +10,4 @@ Database Backend Frontend Performance Success doesn’t just find you. You have to
 Zero Downtime Deployment Blockchain Dream big and dare to fail. Code Review Framework Security Load Testing Optimization Act as if what you do makes a difference. It does. DNS Routing Database UX Optimization
 Neural Networks Success is how high you bounce when you hit bottom. Logging Content Delivery Network Python Cache Invalidation Container Orchestration Frontend Opportunities don't happen. You create them. Data Pipeline Framework
 Distributed Systems Load Balancing Great things never come from comfort zones. JavaScript Virtual Machines Blockchain Logging Scalability Optimization Code Review Success is not in what you have, but who you are. Parallel Processing Microservices Event Sourcing The only way to do great work is to love what you do.
+IoT Happiness is not something ready made. It comes from your own actions. Framework Containerization Sharding Security Event Sourcing
