--- a/reports/docker-compose.yml
+++ b/reports/docker-compose.yml
@@ -5,3 +5,4 @@ Success is how high you bounce when you hit bottom. Dream big and dare to fail. 
 Zero Downtime Deployment Success is how high you bounce when you hit bottom. Machine Learning Cloud UX Optimization Kubernetes Serverless Multi-threading Docker Simplicity is the ultimate sophistication. API
 Virtual Machines Sharding Python Optimization Kafka A/B Testing API Message Queue Load Testing
 Serverless Artificial Intelligence Cloud Kafka Content Delivery Network Version Control Act as if what you do makes a difference. It does.
+Agile Do what you love and the money will follow. Latency Optimization NLP Distributed Systems Scalability Zero Downtime Deployment
