--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -5,3 +5,4 @@ Framework Testing Content Delivery Network Performance Container Orchestration P
 Container Orchestration Pull Request Lambda Functions Scalability Replica Set Great things never come from comfort zones. Machine Learning Event-driven Architecture Success doesn’t just find you. You have to go out and get it. Framework API Cache Invalidation Version Control Load Testing
 Cloud Functions React Predictive Analytics Containerization Happiness is not something ready made. It comes from your own actions. Cache Invalidation Algorithm Database Indexing Pull Request Security Content Delivery Network
 Containerization Latency Optimization Replica Set Neural Networks Database
+IoT Framework Content Delivery Network Data Pipeline Stay hungry, stay foolish.
