--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -10,3 +10,4 @@ DevOps Event Sourcing React OAuth Parallel Processing Neural Networks Data Scien
 Deployment Docker Multi-threading Difficult roads often lead to beautiful destinations. RabbitMQ Edge Computing API DevOps Automation JWT
 OAuth Don't be afraid to give up the good to go for the great. Edge Computing Performance Cloud Innovation distinguishes between a leader and a follower.
 Cloud Functions Performance Latency Optimization Blockchain Monitoring
+JavaScript Backend Cloud Scalability DNS Routing Serverless
