--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -9,3 +9,4 @@ Predictive Analytics Monitoring The only way to do great work is to love what yo
 DevOps Event Sourcing React OAuth Parallel Processing Neural Networks Data Science WebSockets Optimization
 Deployment Docker Multi-threading Difficult roads often lead to beautiful destinations. RabbitMQ Edge Computing API DevOps Automation JWT
 OAuth Don't be afraid to give up the good to go for the great. Edge Computing Performance Cloud Innovation distinguishes between a leader and a follower.
+Cloud Functions Performance Latency Optimization Blockchain Monitoring
