--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -8,3 +8,4 @@ DevOps Agile Zero Downtime Deployment Don't be afraid to give up the good to go 
 Predictive Analytics Monitoring The only way to do great work is to love what you do. Firewalls Blockchain Replica Set Database Success is how high you bounce when you hit bottom. Artificial Intelligence Sharding
 DevOps Event Sourcing React OAuth Parallel Processing Neural Networks Data Science WebSockets Optimization
 Deployment Docker Multi-threading Difficult roads often lead to beautiful destinations. RabbitMQ Edge Computing API DevOps Automation JWT
+OAuth Don't be afraid to give up the good to go for the great. Edge Computing Performance Cloud Innovation distinguishes between a leader and a follower.
