--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -4,3 +4,4 @@ Stay hungry, stay foolish. Machine Learning Success usually comes to those who a
 Framework Testing Content Delivery Network Performance Container Orchestration Python If you can dream it, you can do it. JWT JavaScript Agile Act as if what you do makes a difference. It does. Edge Computing Deployment CI/CD
 Container Orchestration Pull Request Lambda Functions Scalability Replica Set Great things never come from comfort zones. Machine Learning Event-driven Architecture Success doesn’t just find you. You have to go out and get it. Framework API Cache Invalidation Version Control Load Testing
 Cloud Functions React Predictive Analytics Containerization Happiness is not something ready made. It comes from your own actions. Cache Invalidation Algorithm Database Indexing Pull Request Security Content Delivery Network
+Containerization Latency Optimization Replica Set Neural Networks Database
