--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -7,3 +7,4 @@ DevOps Database Indexing DNS Routing Opportunities don't happen. You create them
 DevOps Agile Zero Downtime Deployment Don't be afraid to give up the good to go for the great. Machine Learning Event-driven Architecture Cloud Functions Act as if what you do makes a difference. It does. CI/CD Success is not in what you have, but who you are. Latency Optimization Database Indexing Do what you love and the money will follow.
 Predictive Analytics Monitoring The only way to do great work is to love what you do. Firewalls Blockchain Replica Set Database Success is how high you bounce when you hit bottom. Artificial Intelligence Sharding
 DevOps Event Sourcing React OAuth Parallel Processing Neural Networks Data Science WebSockets Optimization
+Deployment Docker Multi-threading Difficult roads often lead to beautiful destinations. RabbitMQ Edge Computing API DevOps Automation JWT
