--- a/reports/config.json
+++ b/reports/config.json
@@ -1,2 +1,3 @@
 JWT Blockchain React Kafka Testing Database Indexing Difficult roads often lead to beautiful destinations.
 Security Act as if what you do makes a difference. It does. Machine Learning JWT Load Testing Simplicity is the ultimate sophistication. Microservices Testing Performance DNS Routing To be the best, you must be able to handle the worst. Difficult roads often lead to beautiful destinations.
+DNS Routing Success is not in what you have, but who you are. Load Testing Algorithm Stay hungry, stay foolish. Microservices Simplicity is the ultimate sophistication. UX Optimization Great things never come from comfort zones. Zero Downtime Deployment
