--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -3,3 +3,4 @@ Predictive Analytics GraphQL Frontend Blockchain Pull Request Stay hungry, stay 
 CI/CD Lambda Functions Machine Learning Microservices Act as if what you do makes a difference. It does.
 Act as if what you do makes a difference. It does. Virtual Machines Parallel Processing Algorithm Do what you love and the money will follow. JWT Blockchain Version Control Logging The only way to do great work is to love what you do. Latency Optimization Kafka API Gateway Data Pipeline Great things never come from comfort zones.
 UX Optimization Firewalls Microservices Data Science Logging DevOps Success usually comes to those who are too busy to be looking for it.
+DevOps Database Indexing DNS Routing Opportunities don't happen. You create them. Success doesn’t just find you. You have to go out and get it. JavaScript Happiness is not something ready made. It comes from your own actions. Event Sourcing UX Optimization Optimization Virtual Machines JWT
