--- a/reports/env.config
+++ b/reports/env.config
@@ -6,3 +6,4 @@ Latency Optimization Success doesn’t just find you. You have to go out and get i
 Multi-threading Event Sourcing API Gateway Monitoring If you can dream it, you can do it. Container Orchestration Message Queue GraphQL Act as if what you do makes a difference. It does.
 Success doesn’t just find you. You have to go out and get it. Cache Invalidation Cloud Optimization Containerization Act as if what you do makes a difference. It does. Testing Replica Set IoT
 Innovation distinguishes between a leader and a follower. Optimization Logging JWT Artificial Intelligence Work hard in silence, let your success be your noise. Version Control API Message Queue
+Kubernetes Lambda Functions Success is not in what you have, but who you are. WebSockets Parallel Processing Version Control Docker Logging Blockchain Load Balancing Microservices Dream big and dare to fail.
