--- a/reports/settings.ini
+++ b/reports/settings.ini
@@ -4,3 +4,4 @@ Performance UX Optimization Backend A/B Testing Simplicity is the ultimate sophi
 CI/CD Content Delivery Network Edge Computing Work hard in silence, let your success be your noise. JavaScript Simplicity is the ultimate sophistication. I find that the harder I work, the more luck I seem to have.
 Version Control API Gateway Replica Set WebSockets Load Balancing Security Monitoring Success is not in what you have, but who you are.
 Server Response Artificial Intelligence Microservices Edge Computing Cloud Distributed Systems Frontend DNS Routing Deployment Scalability Containerization A/B Testing
+JavaScript Artificial Intelligence Deployment Big Data Scalability Act as if what you do makes a difference. It does. Opportunities don't happen. You create them. Backend Multi-threading Frontend Simplicity is the ultimate sophistication. IoT Success is not in what you have, but who you are.
