--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -2,3 +2,4 @@ To be the best, you must be able to handle the worst. Don't be afraid to give up
 Predictive Analytics GraphQL Frontend Blockchain Pull Request Stay hungry, stay foolish. Neural Networks Innovation distinguishes between a leader and a follower. Optimization Work hard in silence, let your success be your noise. Happiness is not something ready made. It comes from your own actions. Load Balancing
 CI/CD Lambda Functions Machine Learning Microservices Act as if what you do makes a difference. It does.
 Act as if what you do makes a difference. It does. Virtual Machines Parallel Processing Algorithm Do what you love and the money will follow. JWT Blockchain Version Control Logging The only way to do great work is to love what you do. Latency Optimization Kafka API Gateway Data Pipeline Great things never come from comfort zones.
+UX Optimization Firewalls Microservices Data Science Logging DevOps Success usually comes to those who are too busy to be looking for it.
