--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -5,3 +5,4 @@ Containerization Monitoring Don't be afraid to give up the good to go for the gr
 Kubernetes Containerization Agile Artificial Intelligence API Gateway Database Indexing A/B Testing Testing Scalability Latency Optimization
 Act as if what you do makes a difference. It does. Kubernetes Cache Invalidation CI/CD Don't be afraid to give up the good to go for the great. Load Testing Database Indexing Serverless Data Science DNS Routing Containerization DevOps Algorithm Distributed Systems
 Act as if what you do makes a difference. It does. If you can dream it, you can do it. API Microservices I find that the harder I work, the more luck I seem to have. Testing Kubernetes Dream big and dare to fail. JavaScript Content Delivery Network Algorithm Logging
+Data Science Pull Request Machine Learning GraphQL The only way to do great work is to love what you do. CI/CD Version Control Artificial Intelligence Parallel Processing Load Testing Message Queue Edge Computing
