--- a/reports/env.config
+++ b/reports/env.config
@@ -4,3 +4,4 @@ Kafka Pull Request Message Queue Container Orchestration Content Delivery Networ
 Stay hungry, stay foolish. Zero Downtime Deployment Innovation distinguishes between a leader and a follower. Opportunities don't happen. You create them. API Blockchain
 Latency Optimization Success doesn’t just find you. You have to go out and get it. Innovation distinguishes between a leader and a follower. Microservices Monitoring API Firewalls Multi-threading
 Multi-threading Event Sourcing API Gateway Monitoring If you can dream it, you can do it. Container Orchestration Message Queue GraphQL Act as if what you do makes a difference. It does.
+Success doesn’t just find you. You have to go out and get it. Cache Invalidation Cloud Optimization Containerization Act as if what you do makes a difference. It does. Testing Replica Set IoT
