--- a/reports/settings.ini
+++ b/reports/settings.ini
@@ -3,3 +3,4 @@ Database Automation Algorithm Code Review Framework Backend Predictive Analytics
 Performance UX Optimization Backend A/B Testing Simplicity is the ultimate sophistication. Blockchain API Gateway If you can dream it, you can do it. Cloud Multi-threading Deployment
 CI/CD Content Delivery Network Edge Computing Work hard in silence, let your success be your noise. JavaScript Simplicity is the ultimate sophistication. I find that the harder I work, the more luck I seem to have.
 Version Control API Gateway Replica Set WebSockets Load Balancing Security Monitoring Success is not in what you have, but who you are.
+Server Response Artificial Intelligence Microservices Edge Computing Cloud Distributed Systems Frontend DNS Routing Deployment Scalability Containerization A/B Testing
