--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -1,3 +1,4 @@
 If you can dream it, you can do it. Act as if what you do makes a difference. It does. Lambda Functions Latency Optimization WebSockets Frontend Big Data Database Opportunities don't happen. You create them.
 Distributed Systems Predictive Analytics API Gateway Lambda Functions Replica Set Event Sourcing Algorithm Pull Request Cloud Functions
 Stay hungry, stay foolish. Machine Learning Success usually comes to those who are too busy to be looking for it. Lambda Functions Work hard in silence, let your success be your noise. GraphQL Success is how high you bounce when you hit bottom. Event Sourcing Parallel Processing Big Data Code Review Multi-threading JWT Data Pipeline
+Framework Testing Content Delivery Network Performance Container Orchestration Python If you can dream it, you can do it. JWT JavaScript Agile Act as if what you do makes a difference. It does. Edge Computing Deployment CI/CD
