--- a/reports/env.config
+++ b/reports/env.config
@@ -2,3 +2,4 @@ Stay hungry, stay foolish. DevOps Logging React Docker Simplicity is the ultimat
 Success is how high you bounce when you hit bottom. React Do what you love and the money will follow. Testing Dream big and dare to fail. Kubernetes Server Response Difficult roads often lead to beautiful destinations. Scalability Performance IoT
 Kafka Pull Request Message Queue Container Orchestration Content Delivery Network IoT Firewalls Docker Neural Networks RabbitMQ
 Stay hungry, stay foolish. Zero Downtime Deployment Innovation distinguishes between a leader and a follower. Opportunities don't happen. You create them. API Blockchain
+Latency Optimization Success doesn’t just find you. You have to go out and get it. Innovation distinguishes between a leader and a follower. Microservices Monitoring API Firewalls Multi-threading
