--- a/reports/docker-compose.yml
+++ b/reports/docker-compose.yml
@@ -1,2 +1,3 @@
 Optimization Algorithm Cache Invalidation Parallel Processing Neural Networks Data Science
 Content Delivery Network Stay hungry, stay foolish. Framework Don't be afraid to give up the good to go for the great. Sharding Serverless Scalability
+Automation NLP Act as if what you do makes a difference. It does. The only way to do great work is to love what you do. Version Control OAuth Serverless Optimization I find that the harder I work, the more luck I seem to have. Database Indexing Stay hungry, stay foolish. Microservices
