--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -3,3 +3,4 @@ Frontend GraphQL Microservices Docker Multi-threading Load Testing Cache Invalid
 If you can dream it, you can do it. Load Testing Docker IoT Replica Set Monitoring Data Science Quantum Computing Work hard in silence, let your success be your noise. Testing Parallel Processing
 Containerization Monitoring Don't be afraid to give up the good to go for the great. Load Testing Optimization Container Orchestration
 Kubernetes Containerization Agile Artificial Intelligence API Gateway Database Indexing A/B Testing Testing Scalability Latency Optimization
+Act as if what you do makes a difference. It does. Kubernetes Cache Invalidation CI/CD Don't be afraid to give up the good to go for the great. Load Testing Database Indexing Serverless Data Science DNS Routing Containerization DevOps Algorithm Distributed Systems
