--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -2,3 +2,4 @@ GraphQL Microservices JavaScript Cloud Content Delivery Network JWT Virtual Mach
 Frontend GraphQL Microservices Docker Multi-threading Load Testing Cache Invalidation Lambda Functions Cloud A/B Testing Distributed Systems Container Orchestration Version Control
 If you can dream it, you can do it. Load Testing Docker IoT Replica Set Monitoring Data Science Quantum Computing Work hard in silence, let your success be your noise. Testing Parallel Processing
 Containerization Monitoring Don't be afraid to give up the good to go for the great. Load Testing Optimization Container Orchestration
+Kubernetes Containerization Agile Artificial Intelligence API Gateway Database Indexing A/B Testing Testing Scalability Latency Optimization
