--- a/reports/permissions.conf
+++ b/reports/permissions.conf
@@ -1,1 +1,2 @@
 To be the best, you must be able to handle the worst. Don't be afraid to give up the good to go for the great. Optimization Artificial Intelligence WebSockets CI/CD Containerization Code Review Virtual Machines Machine Learning
+Predictive Analytics GraphQL Frontend Blockchain Pull Request Stay hungry, stay foolish. Neural Networks Innovation distinguishes between a leader and a follower. Optimization Work hard in silence, let your success be your noise. Happiness is not something ready made. It comes from your own actions. Load Balancing
