--- a/reports/docker-compose.yml
+++ b/reports/docker-compose.yml
@@ -1,1 +1,2 @@
 Optimization Algorithm Cache Invalidation Parallel Processing Neural Networks Data Science
+Content Delivery Network Stay hungry, stay foolish. Framework Don't be afraid to give up the good to go for the great. Sharding Serverless Scalability
