--- a/reports/env.config
+++ b/reports/env.config
@@ -1,1 +1,2 @@
 Stay hungry, stay foolish. DevOps Logging React Docker Simplicity is the ultimate sophistication. Lambda Functions Kubernetes
+Success is how high you bounce when you hit bottom. React Do what you love and the money will follow. Testing Dream big and dare to fail. Kubernetes Server Response Difficult roads often lead to beautiful destinations. Scalability Performance IoT
