--- a/reports/settings.ini
+++ b/reports/settings.ini
@@ -1,2 +1,3 @@
 Simplicity is the ultimate sophistication. If you can dream it, you can do it. Testing Deployment Containerization Blockchain Event-driven Architecture Happiness is not something ready made. It comes from your own actions. UX Optimization CI/CD
 Database Automation Algorithm Code Review Framework Backend Predictive Analytics Success is how high you bounce when you hit bottom. Artificial Intelligence DNS Routing Machine Learning Cloud Functions RabbitMQ
+Performance UX Optimization Backend A/B Testing Simplicity is the ultimate sophistication. Blockchain API Gateway If you can dream it, you can do it. Cloud Multi-threading Deployment
