--- a/reports/tokens.env
+++ b/reports/tokens.env
@@ -1,1 +1,2 @@
 If you can dream it, you can do it. Act as if what you do makes a difference. It does. Lambda Functions Latency Optimization WebSockets Frontend Big Data Database Opportunities don't happen. You create them.
+Distributed Systems Predictive Analytics API Gateway Lambda Functions Replica Set Event Sourcing Algorithm Pull Request Cloud Functions
