--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -1,2 +1,3 @@
 GraphQL Microservices JavaScript Cloud Content Delivery Network JWT Virtual Machines Artificial Intelligence Version Control DevOps I find that the harder I work, the more luck I seem to have. Load Testing
 Frontend GraphQL Microservices Docker Multi-threading Load Testing Cache Invalidation Lambda Functions Cloud A/B Testing Distributed Systems Container Orchestration Version Control
+If you can dream it, you can do it. Load Testing Docker IoT Replica Set Monitoring Data Science Quantum Computing Work hard in silence, let your success be your noise. Testing Parallel Processing
