--- a/reports/metrics.yaml
+++ b/reports/metrics.yaml
@@ -1,1 +1,2 @@
 GraphQL Microservices JavaScript Cloud Content Delivery Network JWT Virtual Machines Artificial Intelligence Version Control DevOps I find that the harder I work, the more luck I seem to have. Load Testing
+Frontend GraphQL Microservices Docker Multi-threading Load Testing Cache Invalidation Lambda Functions Cloud A/B Testing Distributed Systems Container Orchestration Version Control
